# koog6.4test

./: .gitignore  AGENT.md  CHANGELOG.md  CONTRIBUTING.md  README.md  TESTING.md  build.gradle.kts  gradle.properties  qodana.yaml  settings.gradle.kts
.github/: CODEOWNERS  dependabot.yml  file-filters.yml  pull_request_template.md
.github/scripts/: print_changed_files.sh
JasmineStudio/: .gitignore  DEPENDENCIES_USAGE.md  IMPLEMENTATION_SUMMARY.md  OSS_LICENSES_FEATURE.md  architecture_review.md  build.gradle.kts  build_log.txt  build_log_2.txt  build_log_3.txt  build_log_final.txt  network_migration_analysis.md  room_migration_analysis.md  settings.gradle.kts
MyApplication/: Koog-Wave1实施清单.md  Koog-agents全目录接入总计划.md  Koog-agents能力矩阵.md  Koog严格全量接入计划.md  Koog接入安卓应用研究分析.md  Koog操作验收清单.md  build.gradle.kts  settings.gradle.kts
a2a/: CLAUDE.md
app/: build.gradle.kts
convention-plugin-ai/: build.gradle.kts
docs/: README.md  build.gradle.kts  knit.properties  mkdocs.yml  process-api-links.py  pyproject.toml
examples/: README.md
gradle/: libs.versions.toml
inspections/: MissingKDocForPublicAPI.inspection.kts
integration-tests/: build.gradle.kts  env.template.properties
jasmine-core/: TERMUX_UI_ARCHITECTURE.md  TERMUX_UI_JASMINE_ALIGNMENT.md
jasmine-core/prompt/prompt-mnn/src/main/cpp/: CMakeLists.txt  mnn_jni.cpp
koog-agents/: build.gradle.kts
koog-ktor/: Module.md  build.gradle.kts
koog-spring-boot-starter/: Module.md  build.gradle.kts
test-utils/: Module.md  build.gradle.kts  gradle.properties
utils/: Module.md  build.gradle.kts
(+1944 files in other folders)
